--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -76,6 +76,7 @@ server {
     }
 
     location /wsapps {
+
         proxy_pass http://webprotege-gwt-api-gateway:7777;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -84,7 +85,7 @@ server {
     }
 
     location /kibana/ {
-        proxy_pass http://kibana:5601/;
+        proxy_pass http://kibana:5601;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -92,16 +93,14 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        rewrite ^/kibana/(.*) /$1 break;
         proxy_redirect off;
         proxy_buffering off;
         proxy_read_timeout 300;
         proxy_connect_timeout 300;
         proxy_send_timeout 300;
-    }
-
-    location /kibana {
-        return 301 $scheme://$host$uri/;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_set_header X-Forwarded-Prefix /kibana;
     }
 }
 
