--- a/example.env
+++ b/example.env
@@ -7,3 +7,7 @@ SERVER_HOST=webprotege-local.edu
 ADMIN_CLI_SECRET=
 WEBSOCKET_URL=wss://webprotege-local.edu/wsapps
 SSH_PRIVATE_KEY=
+RABBITMQ_DEFAULT_USER=webprotege
+RABBITMQ_DEFAULT_PASS=webprotege
+RABBITMQ_MANAGEMENT_USER=admin
+RABBITMQ_MANAGEMENT_PASS=admin
