--- a/example.env
+++ b/example.env
@@ -11,3 +11,28 @@ RABBITMQ_DEFAULT_USER=webprotege
 RABBITMQ_DEFAULT_PASS=webprotege
 RABBITMQ_MANAGEMENT_USER=admin
 RABBITMQ_MANAGEMENT_PASS=admin
+# Keycloak Admin Credentials
+KEYCLOAK_ADMIN=admin
+KEYCLOAK_ADMIN_PASSWORD=password
+# MinIO Credentials
+MINIO_ROOT_USER=webprotege
+MINIO_ROOT_PASSWORD=webprotege
+
+# MinIO Configuration
+MINIO_ROOT_USER=webprotege
+MINIO_ROOT_PASSWORD=webprotege
+MINIO_BUCKET_NAME=webprotege-uploads
+
+# Keycloak Configuration
+KEYCLOAK_ADMIN=admin
+KEYCLOAK_ADMIN_PASSWORD=password
+KEYCLOAK_CLIENT_ID=admin-cli
+
+# RabbitMQ Configuration
+RABBITMQ_DEFAULT_USER=webprotege
+RABBITMQ_DEFAULT_PASS=webprotege
+RABBITMQ_TIMEOUT=600000
+
+# File Upload Configuration
+MAX_FILE_SIZE=300MB
+MAX_REQUEST_SIZE=300MB
