trying to fix the healtcheck

--- a/keycloak/Dockerfile
+++ b/keycloak/Dockerfile
@@ -1,6 +1,9 @@
 FROM keycloak/keycloak:26.1
 
-EXPOSE 8080
+USER root
+RUN microdnf install -y curl && microdnf clean all
+USER keycloak
 
+EXPOSE 8080
 
 COPY ./webprotege.v2 /opt/keycloak/themes/webprotege.v2
