added rabbitmq configs.

--- a/rabbitmq/config/rabbitmq.conf
+++ b/rabbitmq/config/rabbitmq.conf
@@ -8,3 +8,11 @@ num_acceptors.tcp = 10
 handshake_timeout = 10000
 channel_max = 0
 heartbeat = 60
+
+# Basic logging configuration
+log.console = true
+log.console.level = info
+log.file = true
+log.file.level = info
+log.exchange = true
+log.exchange.level = info
