[https://github.com/who-icatx/icatx-project/issues/95]: added env vars for history and notes url static pages

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -120,6 +120,8 @@ services:
       webprotege.logoutUrl: http://${SERVER_HOST}/webprotege/logout
       webprotege.fileUploadurl: http://${SERVER_HOST}
       webprotege.keycloakLogoutUrl: ${KEYCLOAK_LOGOUT_URL}
+      webprotege.entityHistoryUrlFormat: ${ENTITY_HISTORY_URL_FORMAT}
+      webprotege.entityNotesUrlFormat: ${ENTITY_NOTES_URL_FORMAT}
       webprotege.rabbit.timeout: 300000
       JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
       _JAVA_OPTIONS: >
