--- a/example.env
+++ b/example.env
@@ -4,4 +4,6 @@ JWK_SET_URI=http://webprotege-local.edu/keycloak-admin/realms/webprotege/protoco
 KEYCLOAK_WEBPROTEGE_URL=http://webprotege-local.edu/keycloak-admin/realms/webprotege
 KEYCLOAK_LOGOUT_URL=http://webprotege-local.edu/keycloak-admin/realms/webprotege/protocol/openid-connect/logout
 SERVER_HOST=webprotege-local.edu
+ENTITY_HISTORY_URL_FORMAT: https://icat-history.azurewebsites.net/changes/{0}.html
+ENTITY_NOTES_URL_FORMAT: https://icat-history.azurewebsites.net/notes/{0}.html
 ADMIN_CLI_SECRET=
