--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -458,87 +458,87 @@ services:
     networks:
       - elk
 
+#
+#  elasticsearch:
+#    image: docker.elastic.co/elasticsearch/elasticsearch:8.12.2
+#    environment:
+#      - discovery.type=single-node
+#      - xpack.security.enabled=false
+#      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+#    ports:
+#      - "9200:9200"
+#    volumes:
+#      - elasticsearch-data:/usr/share/elasticsearch/data
+#    networks:
+#      - elk
+#    healthcheck:
+#      test: ["CMD", "curl", "-f", "http://localhost:9200"]
+#      interval: 30s
+#      timeout: 10s
+#      retries: 5
+#
+#  logstash:
+#    image: docker.elastic.co/logstash/logstash:8.12.2
+#    ports:
+#      - "5044:5044"
+#      - "5000:5000/tcp"
+#      - "5000:5000/udp"
+#      - "9600:9600"
+#    environment:
+#      LS_JAVA_OPTS: "-Xmx256m -Xms256m"
+#    volumes:
+#      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
+#      - ./logstash/pipeline:/usr/share/logstash/pipeline:ro
+#    networks:
+#      - elk
+#    depends_on:
+#      - elasticsearch
+#
+#  filebeat:
+#    image: docker.elastic.co/beats/filebeat:8.12.2
+#    user: root
+#    volumes:
+#      - ./filebeat/config/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
+#      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+#      - /var/run/docker.sock:/var/run/docker.sock:ro
+#    networks:
+#      - elk
+#    depends_on:
+#      - logstash
+#    command: ["filebeat", "-e", "--strict.perms=false", "-c", "/usr/share/filebeat/filebeat.yml"]
 
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.12.2
-    environment:
-      - discovery.type=single-node
-      - xpack.security.enabled=false
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ports:
-      - "9200:9200"
-    volumes:
-      - elasticsearch-data:/usr/share/elasticsearch/data
-    networks:
-      - elk
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9200"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-
-  logstash:
-    image: docker.elastic.co/logstash/logstash:8.12.2
-    ports:
-      - "5044:5044"
-      - "5000:5000/tcp"
-      - "5000:5000/udp"
-      - "9600:9600"
-    environment:
-      LS_JAVA_OPTS: "-Xmx256m -Xms256m"
-    volumes:
-      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
-      - ./logstash/pipeline:/usr/share/logstash/pipeline:ro
-    networks:
-      - elk
-    depends_on:
-      - elasticsearch
-
-  filebeat:
-    image: docker.elastic.co/beats/filebeat:8.12.2
-    user: root
-    volumes:
-      - ./filebeat/config/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
-      - /var/lib/docker/containers:/var/lib/docker/containers:ro
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-    networks:
-      - elk
-    depends_on:
-      - logstash
-    command: ["filebeat", "-e", "--strict.perms=false", "-c", "/usr/share/filebeat/filebeat.yml"]
-
-  kibana:
-    image: docker.elastic.co/kibana/kibana:8.12.2
-    ports:
-      - "5601:5601"
-    environment:
-      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-      - XPACK_SAVED_OBJECTS_IMPORT=/usr/share/kibana/dashboards/webprotege-logs.ndjson
-      - ELASTICSEARCH_SERVICE_HOST=elasticsearch
-      - ELASTICSEARCH_SERVICE_PORT=9200
-      - XPACK_SECURITY_ENABLED=false
-      - ELASTICSEARCH_USERNAME=kibana_system
-      - ELASTICSEARCH_PASSWORD=kibana
-      - SERVER_BASEPATH=/kibana
-      - SERVER_REWRITEBASEPATH=true
-      - SERVER_PUBLICBASEURL=http://${SERVER_HOST}/kibana
-      - SERVER_HOST=0.0.0.0
-      - SERVER_NAME=kibana
-      - SERVER_MAXPAYLOADBYTES=1048576
-      - ELASTICSEARCH_SSL_VERIFICATIONMODE=none
-    volumes:
-      - ./kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml:ro
-      - ./kibana/dashboards:/usr/share/kibana/dashboards
-    networks:
-      - elk
-    depends_on:
-      elasticsearch:
-        condition: service_healthy
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5601"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
+#  kibana:
+#    image: docker.elastic.co/kibana/kibana:8.12.2
+#    ports:
+#      - "5601:5601"
+#    environment:
+#      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+#      - XPACK_SAVED_OBJECTS_IMPORT=/usr/share/kibana/dashboards/webprotege-logs.ndjson
+#      - ELASTICSEARCH_SERVICE_HOST=elasticsearch
+#      - ELASTICSEARCH_SERVICE_PORT=9200
+#      - XPACK_SECURITY_ENABLED=false
+#      - ELASTICSEARCH_USERNAME=kibana_system
+#      - ELASTICSEARCH_PASSWORD=kibana
+#      - SERVER_BASEPATH=/kibana
+#      - SERVER_REWRITEBASEPATH=true
+#      - SERVER_PUBLICBASEURL=http://${SERVER_HOST}/kibana
+#      - SERVER_HOST=0.0.0.0
+#      - SERVER_NAME=kibana
+#      - SERVER_MAXPAYLOADBYTES=1048576
+#      - ELASTICSEARCH_SSL_VERIFICATIONMODE=none
+#    volumes:
+#      - ./kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml:ro
+#      - ./kibana/dashboards:/usr/share/kibana/dashboards
+#    networks:
+#      - elk
+#    depends_on:
+#      elasticsearch:
+#        condition: service_healthy
+#    healthcheck:
+#      test: ["CMD", "curl", "-f", "http://localhost:5601"]
+#      interval: 30s
+#      timeout: 10s
+#      retries: 5
 
   nginx:
     image: protegeproject/webprotege-nginx:1.2.2
