--- a/example.env
+++ b/example.env
@@ -6,4 +6,5 @@ KEYCLOAK_LOGOUT_URL=http://webprotege-local.edu/keycloak-admin/realms/webprotege
 SERVER_HOST=webprotege-local.edu
 ENTITY_HISTORY_URL_FORMAT: https://icat-history.azurewebsites.net/changes/{0}.html
 ENTITY_NOTES_URL_FORMAT: https://icat-history.azurewebsites.net/notes/{0}.html
+ENTITY_OLD_HISTORY_AND_NOTES_DATE: "May 1st, 2025"
 ADMIN_CLI_SECRET=
