--- a/example.env
+++ b/example.env
@@ -18,6 +18,9 @@ KEYCLOAK_ADMIN_PASSWORD=password
 MINIO_ROOT_USER=webprotege
 MINIO_ROOT_PASSWORD=webprotege
 
+
+
+
 # MinIO Configuration
 MINIO_ROOT_USER=webprotege
 MINIO_ROOT_PASSWORD=webprotege
@@ -36,3 +39,9 @@ RABBITMQ_TIMEOUT=600000
 # File Upload Configuration
 MAX_FILE_SIZE=300MB
 MAX_REQUEST_SIZE=300MB
+
+# ELK Stack Authentication
+ELASTICSEARCH_USERNAME=elastic
+ELASTICSEARCH_PASSWORD=changeme
+KIBANA_USERNAME=kibana
+KIBANA_PASSWORD=changeme
