--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -84,24 +84,24 @@ server {
         proxy_set_header Host $host;
     }
 
-#     location /kibana/ {
-#         proxy_pass http://kibana:5601;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#         proxy_http_version 1.1;
-#         proxy_set_header Upgrade $http_upgrade;
-#         proxy_set_header Connection "upgrade";
-#         proxy_redirect off;
-#         proxy_buffering off;
-#         proxy_read_timeout 300;
-#         proxy_connect_timeout 300;
-#         proxy_send_timeout 300;
-#         proxy_set_header X-Forwarded-Host $host;
-#         proxy_set_header X-Forwarded-Port $server_port;
-#         proxy_set_header X-Forwarded-Prefix /kibana;
-#     }
+    location /kibana/ {
+        proxy_pass http://kibana:5601;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_redirect off;
+        proxy_buffering off;
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
+        proxy_send_timeout 300;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_set_header X-Forwarded-Prefix /kibana;
+    }
 }
 
 upstream websocket  {
