--- a/example.env
+++ b/example.env
@@ -4,7 +4,7 @@ JWK_SET_URI=http://webprotege-local.edu/keycloak-admin/realms/webprotege/protoco
 KEYCLOAK_WEBPROTEGE_URL=http://webprotege-local.edu/keycloak-admin/realms/webprotege
 KEYCLOAK_LOGOUT_URL=http://webprotege-local.edu/keycloak-admin/realms/webprotege/protocol/openid-connect/logout
 SERVER_HOST=webprotege-local.edu
-ENTITY_HISTORY_URL_FORMAT: https://icat-history.azurewebsites.net/changes/{0}.html
-ENTITY_NOTES_URL_FORMAT: https://icat-history.azurewebsites.net/notes/{0}.html
+ENTITY_HISTORY_URL_FORMAT: https://icd11files.blob.core.windows.net/icathistory/new/changes/{0}.html
+ENTITY_NOTES_URL_FORMAT: https://icd11files.blob.core.windows.net/icathistory/new/notes/{0}.html
 ENTITY_OLD_HISTORY_AND_NOTES_DATE: "May 1st, 2025"
 ADMIN_CLI_SECRET=
