--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -82,6 +82,14 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
         proxy_set_header Host $host;
+                # WebSocket timeout settings
+                proxy_read_timeout 300s;
+                proxy_connect_timeout 75s;
+                proxy_send_timeout 300s;
+
+                # Keep-alive settings
+                keepalive_timeout 300s;
+                keepalive_requests 100;
     }
 
     location /kibana/ {
