--- a/example.env
+++ b/example.env
@@ -23,16 +23,7 @@ MINIO_ROOT_USER=webprotege
 MINIO_ROOT_PASSWORD=webprotege
 MINIO_BUCKET_NAME=webprotege-uploads
 
-# Keycloak Configuration
-KEYCLOAK_ADMIN=admin
-KEYCLOAK_ADMIN_PASSWORD=password
-KEYCLOAK_CLIENT_ID=admin-cli
-
-# RabbitMQ Configuration
-RABBITMQ_DEFAULT_USER=webprotege
-RABBITMQ_DEFAULT_PASS=webprotege
-RABBITMQ_TIMEOUT=600000
-
-# File Upload Configuration
-MAX_FILE_SIZE=300MB
-MAX_REQUEST_SIZE=300MB
+# ICATX Versioning Service Keycloak Configuration
+KEYCLOAK_TOKEN_URL=http://webprotege-local.edu/keycloak-admin/realms/webprotege/protocol/openid-connect/token
+ICATX_CLIENT_ID=Icatx_application
+ICATX_CLIENT_SECRET=3NIpcWU6zyH765G6UOvQ9d78swJmKks6
